show only visible values in info and fix width finding

--- a/index.css
+++ b/index.css
@@ -4,7 +4,9 @@ html, body {
     color: black;
     transition: background-color 1s linear;
     padding: 10px;
-    /*box-sizing: border-box;*/
+    overflow-x: hidden;
+    width: 100%;
+    box-sizing: border-box;
 }
 
 body.night{
@@ -36,11 +38,13 @@ body.night #info{
     display: flex;
     flex-flow: row wrap;
     width: 100%;
-    /*margin: 10px;*/
+    /* padding: 10px; */
+    box-sizing: border-box;
 }
 
 #charts > * {
     width: 100%;
+    box-sizing: border-box;
     max-width: 400px;
     flex-shrink: 0;
     flex-grow: 0;
@@ -51,7 +55,7 @@ body.night #info{
     flex-flow: column nowrap;
     justify-content: center;
     align-items: flex-start;
-    margin: 10px 0px;
+    padding: 10px 10px;
     position: relative;
 }
 
@@ -65,6 +69,7 @@ body.night #info{
 
 .chart canvas {
     border: solid lightgray 1px;
+    box-sizing: border-box;
 }
 
 .chart .fullChart {
@@ -79,8 +84,7 @@ body.night #info{
 }
 
 .lines label{
-    padding: 5px;
-    padding-right: 10px;
+    padding: 5px 10px 5px 5px;
     margin-right: 15px;
     border: 1px solid lightgray;
     border-radius: 9999px;
@@ -92,10 +96,9 @@ body.night #info{
 .lines .icon{
     display: inline-block;
     width: 11px;
-    padding: 0px 5px;
-    margin-right: 10px;
-    border-style: solid;
-    border-width: 1px;
+    padding: 0 5px;
+    margin: 0 10px 0 0;
+    border: 1px solid;
     border-radius: 100%;
     transition: border-width 0.5s linear;
     box-shadow: inset 0 0 0 10px white;
@@ -104,6 +107,8 @@ body.night #info{
 .lines .icon:before{
     content: '\2713';
     color: white;
+    margin: 0;
+    padding: 0;
 }
 
 .lines input[type=checkbox]:checked + .icon {
@@ -127,6 +132,7 @@ body.night #info{
     padding: 5px 0px;
     pointer-events: none;
     min-width: 110px;
+    max-width: 200px;
 }
 
 #info .date {
@@ -137,7 +143,7 @@ body.night #info{
 .values {
     margin: 0 5px;
     display: flex;
-    flex-flow: row nowrap;
+    flex-flow: row wrap;
     justify-content: flex-start;
 }
 
